*** The MS-Windows specific variable 'w32-collate-ignore-punctuation',
if set to a non-nil value, causes the above 2 functions to ignore
symbol and punctuation characters when collating strings.  This
emulates the behavior of modern Posix platforms when the locale's
codeset is "UTF-8" (as in "en_US.UTF-8").  This is needed because
MS-Windows doesn't support UTF-8 as codeset in its locales.

+++
** New function 'alist-get', which is also a valid place (aka lvalue).

+++
** New function 'funcall-interactively', which works like 'funcall'
but makes 'called-interactively-p' treat the function as (you guessed it)
called interactively.

+++
** New function 'function-put' to use instead of 'put' for function properties.

+++
** The new function 'bidi-find-overridden-directionality' allows you to
find characters whose directionality was, perhaps maliciously,
overridden by directional override control characters.  Lisp programs
can use this to detect potential phishing of URLs and other links that
exploits bidirectional display reordering.

+++
** The new function 'buffer-substring-with-bidi-context' allows you to
copy a portion of a buffer into a different location while preserving
the visual appearance both of the copied text and the text at
destination, even when the copied text includes mixed bidirectional
text and directional control characters.

+++
** New properties that can be specified with 'declare':
*** '(interactive-only INSTEAD)', says to use INSTEAD for non-interactive use.
*** '(pure VAL)', if VAL is non-nil, indicates the function is pure.
*** '(side-effect-free VAL)', if VAL is non-nil, indicates the function does not
have side effects.

+++
** New macro 'with-file-modes', for evaluating expressions with default file
permissions set to temporary values (e.g., for creating private files).

+++
** You can access the slots of structures using 'cl-struct-slot-value'.

+++
** Function 'sort' can deal with vectors.

---